--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-voice/voice": "^3.2.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "axios": "^1.6.8",
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.74.0",
+    "react-native-voice": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
